# langchain-course

./: .gitignore
projects/intro-to-vector-dbs/: ingestion.py  main.py  mediumblog1.txt  pyproject.toml  template.py
